add chart and calendar

--- a/ClientApp/public/index.html
+++ b/ClientApp/public/index.html
@@ -8,11 +8,53 @@
     <base href="%PUBLIC_URL%/" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <title>Expensions tracker </title>
+
+    <script src="../lib/jquery/jquery.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+    <script type="text/javascript" src=" https://code.jquery.com/jquery-3.5.1.js"></script>
+    <link href="zabuto_calendar.min.css" rel="stylesheet">
+    <script src="zabuto_calendar.min.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
+
+    <title>Expensions tracker app</title>
 </head>
 
 <body>
-    <div id="root">
-    </div>
+    <div id="root"></div>
 </body>
+
 </html>
+<script>
+
+    $(document).ready(function () {
+        $("#demo-calendar-basic").zabuto_calendar({
+            classname: 'table table-bordered lightgrey-weekends'
+        });
+    });
+
+    $(document).ready(function () {
+        var ctx = document.getElementById("myChart").getContext("2d");
+        const xValues = [50, 60, 70, 80, 90, 100, 110, 120, 130, 140, 150, 150];
+        const yValues = [7, 8, 8, 9, 9, 9, 10, 11, 14, 14, 15, 15];
+
+        new Chart(ctx, {
+            type: "pie",
+            data: {
+                labels: xValues,
+                datasets: [{
+                    fill: false,
+                    lineTension: 0,
+                    backgroundColor: "rgba(200,200,200,1.0)",
+                    borderColor: "rgba(0,0,0,0.1)",
+                    data: yValues
+                }]
+            },
+            options: {
+                legend: { display: false },
+                scales: {
+                    yAxes: [{ ticks: { min: 6, max: 16 } }],
+                }
+            }
+        });
+    });
+</script>
